Add global theme toggle with system preference support
Implements light/dark mode switching that syncs across all windows (launcher and workspaces). Theme preference is stored globally in AppState and supports three modes: light, dark, and auto (follows system). Uses Mantine's color scheme system and Electron's nativeTheme API for system integration.

--- a/src/renderer/launcher/index.html
+++ b/src/renderer/launcher/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Engram Launcher</title>
+    <script>
+      // Mantine ColorSchemeScript - prevents flash of incorrect theme
+      const colorScheme = localStorage.getItem('mantine-color-scheme-value') || 'auto';
+      if (colorScheme === 'dark' || (colorScheme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.setAttribute('data-mantine-color-scheme', 'dark');
+      } else {
+        document.documentElement.setAttribute('data-mantine-color-scheme', 'light');
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
