--- a/src/renderer/workspace/index.html
+++ b/src/renderer/workspace/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
-
+    <title>Engram</title>
+    <script>
+      // Mantine ColorSchemeScript - prevents flash of incorrect theme
+      const colorScheme = localStorage.getItem('mantine-color-scheme-value') || 'auto';
+      if (colorScheme === 'dark' || (colorScheme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.setAttribute('data-mantine-color-scheme', 'dark');
+      } else {
+        document.documentElement.setAttribute('data-mantine-color-scheme', 'light');
+      }
+    </script>
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
   </body>
 </html>
